Generando CUA correctamente

--- a/cua2024/funcionarios/templates/funcionarios/detalle.html
+++ b/cua2024/funcionarios/templates/funcionarios/detalle.html
@@ -9,8 +9,11 @@
     <div>Id Funcionario: {{funcionario.id}} </div>
     <div>Codigo Funcionario: {{funcionario.codigo_funcionario}} </div>
     <div>Nombre Funcionario: {{funcionario.nombre_funcionario}} </div>
-    <div>Grado Funcionario: {{funcionario.grado_funcionario}} </div>
-    <div>Departamento Funcionario: {{funcionario.departamento_funcionario}} </div>
+    <div>C.U.A: {{funcionario.cua_funcionario}} </div>
+    <div>Grado: {{funcionario.grado_funcionario}} </div>
+    <div>Departamento: {{funcionario.departamento_funcionario}} </div>
+    <div>Estado: {{funcionario.estado_funcionario}} </div>
+
     <a href="{% url 'index' %}">Regresar al Inicio</a>
 </body>
 </html>
