--- a/cua2024/webapp/templates/bienvenido.html
+++ b/cua2024/webapp/templates/bienvenido.html
@@ -23,6 +23,7 @@
                             <th>Codigo Funcionario</th>
                             <th>Nombre</th>
                             <th>Grado</th>
+                            <th>CUA</th>
                             <th>Departamento</th>
                             <th>Estado</th>
                             <th>  </th>
@@ -36,6 +37,7 @@
                             <td>{{funcionario.codigo_funcionario}}</td>
                             <td>{{funcionario.nombre_funcionario}}</td>
                             <td>{{funcionario.grado_funcionario}}</td>
+                            <td type=hidden>{{funcionario.cua_funcionario}}</td>
                             <td>{{funcionario.departamento_funcionario}}</td>
                             <td>{{funcionario.estado_funcionario}}</td>
                             <td><a href="detalle_funcionario/{{funcionario.id}}"> Ver </a> </td>
