--- a/cua2024/funcionarios/templates/funcionarios/nuevo.html
+++ b/cua2024/funcionarios/templates/funcionarios/nuevo.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo Funcionario</title>
 </head>
-<body>
-    <form method="POST">
-        <h1>Agregar Funcionario</h1>
-        <table>
-            {{formaFuncionario}}
-        </table>
-        <button type="submit"> Enviar </button>
-        {% csrf_token %}
-    </form>
+{% block content %}
+    <body>
+        <form method="POST">
+            <h1>Agregar Funcionario</h1>
+            <table>
+                {{formaFuncionario}}
+            </table>
+            <button type="submit"> Enviar </button>
+            {% csrf_token %}
+        </form>
 </body>
+{% endblock content %}
 </html>
