--- a/cua2024/webapp/templates/base.html
+++ b/cua2024/webapp/templates/base.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="detalle_funcionario/{{funcionario.id}}">Consulta Funcionario</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8000/">Consulta CUA</a>
+                <a class="nav-link" href="codfuncionario">Consulta CUA</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nuevo_funcionario">Ingreso C.U.A</a>
