--- a/cua2024/webapp/templates/bienvenido.html
+++ b/cua2024/webapp/templates/bienvenido.html
@@ -15,7 +15,7 @@
 
     
     <div class="container">
-        <table class="table table-bordered table-striped" border="1">
+        <table class="table table-success table-bordered table-striped" border="1">
             <thead>
                 <tr>
                     <th>Id</th>
