--- a/cua2024/webapp/templates/base.html
+++ b/cua2024/webapp/templates/base.html
@@ -45,8 +45,8 @@
           <div class="collapse navbar-collapse " id="navbarSupportedContent"  >
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link active" href="http://localhost:8000/admin">Inicio</a> 
-              {# <a class="nav-link active" href="{% url home %}">Inicio</a> #}
+                {#<a class="nav-link active" href="http://localhost:8000/">Inicio</a> #}
+                <a class="nav-link active" href="{% url 'home' %}">Inicio</a> 
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="detalle_funcionario/{{funcionario.id}}">Consulta Funcionario</a>
@@ -64,16 +64,16 @@
                 <a class="nav-link" href="/bienvenido">Listado General</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://localhost:8000/admin">Administración Parámetros</a>
+                <a class="nav-link" href="/admin">Administración Parámetros</a>
               </li>
               {% if user.is_authenticated %}
       
                 <li class="nav-item">
-                        <a class="nav-link" href="/inicio">Logout</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Conectado como, {{user.username}}</a>
-                      </li>
+                    <a class="nav-link" href="/inicio">Logout</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Conectado como, {{user.username}}</a>
+                </li>
 
                {% endif %}
 
