--- a/cua2024/funcionarios/templates/funcionarios/editar.html
+++ b/cua2024/funcionarios/templates/funcionarios/editar.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Funcionario</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<!--    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">-->
     
     
 </head>
 {% block content %}
 <body>
-    <div class="container">
-        <form method="POST">
-            <h1 >Editar Funcionario</h1>
-            <table class="table table-bordered">
-                {{formaFuncionario}}
-            </table>
-            <button type="submit" class="btn btn-outline-success"> Enviar </button>
-            {% csrf_token %}
-        </form>
+    <div class="card mx-auto bg-success text-color=white" style="width:30rem ">
+        <div class="container">
+            <h1 class="card-title center">Editar Funcionario</h1>
+            <form method="POST">
+                
+                <table class="table-success  border-success mb-4"> 
+                    {{formaFuncionario}}
+                </table>    
+                {% csrf_token %}
+            </form>
+        </div>
     </div>
+    <button type="submit" class="btn btn-success"> Enviar </button>
+
 </body>
 {% endblock content %}
 </html>
