--- a/cua2024/funcionarios/templates/funcionarios/solicita_codigo.html
+++ b/cua2024/funcionarios/templates/funcionarios/solicita_codigo.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="container">
-      <form action="cua_funcionario/{{codcua}}" method="POST">
-
+      <form action="/verificar_codigo_cua/ingresocua" method="POST">
+        {% csrf_token %}
         <div class="row border justify-content-center align-items-center">
             <p class="col-md-3 justify-content-center ">
               <h4>Ingreso CUA Funcionario</h4>
@@ -20,18 +20,11 @@
                 <label for="ingresocua" class="col-form-label">Código Funcionario</label>
             </div>
             <div class="col-auto">
-              <input type="text" maxlength=7 id="ingresocua" class="form-control" name="codcua">
-            </div>
-            <div class="col-auto">
                 <span id="HelpInline" class="form-text">
-                    Debe tener formato 999999-X
+                    (Debe tener formato 999999-X)
                 </span> 
             </div>
-            <div class="col-auto">
-              <input type="submit" id="ingresocua" class="btn btn-success" >
-            </div>
         </div>
-
       </form>
     </div>
   </body>
