--- a/cua2024/webapp/templates/base.html
+++ b/cua2024/webapp/templates/base.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mi Proyecto{% endblock %}</title>
+    <title>{% block title %}C.U.A.{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
     
     <style>
         body {
@@ -49,16 +50,16 @@
                 <a class="nav-link active" href="{% url 'home' %}">Inicio</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="detalle_funcionario/{{funcionario.id}}">Consulta Funcionario</a>
+                <a class="nav-link" href="verificar_codigo_func">Consulta Funcionario</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="codfuncionario">Consulta CUA</a>
+                <a class="nav-link" href="verificar_codigo_cua">Consulta CUA</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nuevo_funcionario">Ingreso C.U.A</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/selecciona_funcionario">Modifica Funcionario</a>
+                <a class="nav-link" href="recupera_codigo_func">Modifica Funcionario</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/bienvenido">Listado General</a>
