--- a/cua2024/webapp/templates/bienvenido-original.html
+++ b/cua2024/webapp/templates/bienvenido-original.html
@@ -40,14 +40,7 @@
                     <td>{{funcionario.departamento_funcionario}}</td>
                     <td>{{funcionario.estado_funcionario}}</td>
                     <td><a class="btn btn-outline-success" href="detalle_funcionario/{{funcionario.id}}" role="button">Ver</a></td>
-                    <td>
-                        <form action="editar_funcionario/{{funcionario.id}}" method="POST" style="display: inline;" >
-                            <input type="hidden" name="funcionario.cua_funcionario" value="{{ funcionario_var.cua_funcionario }}">
-                            {% csrf_token %}
-                            {{ formaFuncionario.as_p}}
-                            <button type="submit" class="btn btn-outline-success">Editar </button>
-                        </form>
-                    </td> 
+                    <td><a class="btn btn-outline-success" href="editar_funcionario/{{funcionario.id}}" role="button">Editar</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
