--- a/cua2024/funcionarios/templates/funcionarios/detalle.html
+++ b/cua2024/funcionarios/templates/funcionarios/detalle.html
@@ -50,7 +50,7 @@
                     
                     
                 </div>
-                <p ><a href="{% url 'home' %}" class="btn btn-primary display:flex justify-content-center" >Regresar al Inicio</a></p>
+                <center> <p ><a href="{% url 'home' %}" class="btn btn-primary display:flex justify-content-center" >Regresar al Inicio</a></p> </center>
                 
             </div>
         </div>  
