--- a/cua2024/funcionarios/templates/funcionarios/editar.html
+++ b/cua2024/funcionarios/templates/funcionarios/editar.html
@@ -5,23 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Funcionario</title>
-<!--    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">-->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     
     
 </head>
 {% block content %}
 <body>
-    <div class="card mx-auto border-success text-color=white" style="width:50rem ">
+    <div class="card mx-auto border-success border-2 text-color=white" style="width:50rem ">
         <div class="container">
             <h1 class="card-title" style="color: darkgreen; text-align: center ">Editar Funcionario</h1>
 
-            <form action="editar_funcionario/{{funcionario.id}}" method="POST"  >         
+            <form  method="POST"  >         
+                <table>
+                    {{formaFuncionario}}
+                </table>
+                <center><button type="submit" class="btn btn-success mx-auto "> Grabar </button></center>
                 {% csrf_token %}
-                {{formaFuncionario.as_p}}
             </form>
 
-            <button type="submit" class="btn btn-success mx-auto "> Grabar </button>
+            
         </div>
 
     </div>
