--- a/cua2024/funcionarios/templates/funcionarios/name_func.html
+++ b/cua2024/funcionarios/templates/funcionarios/name_func.html
@@ -11,7 +11,7 @@
     <body>
         <center>
     
-            <div class="text-left row border justify-content-center align-items-center" style="max-width:300px">
+            <div class="text-left row border border-2 justify-content-center align-items-center" style="max-width:300px">
                 <p class="col-md-3 justify-content-center ">
                   <h4 class="container text-center pt-5">Codigo Funcionario    </h4>
                 </p>
