--- a/cua2024/funcionarios/templates/funcionarios/nuevo.html
+++ b/cua2024/funcionarios/templates/funcionarios/nuevo.html
@@ -8,14 +8,14 @@
 </head>
 {% block content %}
     <body>
-        <div class="card mx-auto bg-success text-color=white" style="width:30rem ">
+        <div class="card mx-auto border-success border-2 text-color=white" style="width:50rem ">
             <div class="container">
-            <h1 class="card-title center">Ingresar Funcionario</h1>
+            <h1 class="card-title" style="color: darkgreen; text-align: center">Ingresar Funcionario</h1>
                 <form method="POST">
                     <table>
                         {{formaFuncionario}}
                     </table>
-                    <button type="submit"> Enviar </button>
+                    <center><button type="submit" class="btn btn-success mx-auto "> Enviar </button></center>
                     {% csrf_token %}
                 </form>
             </div>
