--- a/cua2024/webapp/templates/base.html
+++ b/cua2024/webapp/templates/base.html
@@ -70,7 +70,7 @@
               {% if user.is_authenticated %}
       
                 <li class="nav-item">
-                    <a class="nav-link" href="/inicio">Logout</a>
+                    <a class="nav-link" href=" ">Logout</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Conectado como, {{user.username}}</a>
