--- a/cua2024/funcionarios/templates/funcionarios/name_func.html
+++ b/cua2024/funcionarios/templates/funcionarios/name_func.html
@@ -13,7 +13,7 @@
     
             <div class="text-left row border border-2 justify-content-center align-items-center" style="max-width:300px">
                 <p class="col-md-3 justify-content-center ">
-                  <h4 class="container text-center pt-5">Codigo Funcionario    </h4>
+                  <h4 class="container text-center pt-5">Consulta Funcionario    </h4>
                 </p>
                 {% if mensaje_error %}
                     <div class="alert alert-danger">
